# fitbit-dumper

./: .gitignore  README.md  config.template.json  dump.py  pyproject.toml  setup.py
.circleci/: config.yml
